Updated CSS file. Added styles for header/footer, buttons, currentday, temperature, background, and media query.

--- a/assets/style.css
+++ b/assets/style.css
@@ -48,3 +48,77 @@
     text-align: center;
     margin: 0rem;
 }
+
+/* This controls the temperature style */
+.col-12.box {
+    background: whitesmoke;
+    border-radius: 10px;
+    width: 760px;
+    margin-top: -2px;
+    margin-left: -10px;
+}
+
+/* This controls the temperature font style */
+.temperatureFont {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+/* This controls the temperature display */
+.bg-light {
+    margin-top: 15px;
+    border-radius: 10px;
+    margin-bottom: 17px;
+}
+
+/* This controls the cities searched */
+.bg-primary {
+    border-radius: 10px;
+}
+
+/* This controls the cities searched button */
+li {
+    margin-bottom: 10px;
+    margin-left: -40px;
+}
+
+/* This controls the image size for the weather forecast */
+.imgsize {
+    width: 100px;
+    float: right;
+    margin-right: 50%;
+}
+
+@media only screen and (max-width:992px) {
+    .navbar .header-text{       
+      padding-bottom: 0;
+      border-bottom: solid;   
+      width: 100%;
+      text-align: center;
+      height: 10%;
+    }
+    .footer {     
+      height: 7%;    
+      border-top: solid;      
+      border-top-width: 5px;
+      text-align: center; 
+    }
+  }
+
+  @media only screen and (max-width:320px) { 
+    .col-12 .box {
+      width: 100%;
+    }
+    .container{
+      width: 100%;
+    }
+    .navbar .footer .col-4 .row .nav{
+      width: 100%;
+      height:auto;  
+    }
+    .header-text{
+      font-size: 16px;
+    }
+    }
+    #days{
+    margin-left: -25px;
+    }
