--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,7 @@
-/* */
-html,body,.container{
+/* style.css */
+html,
+body,
+.container {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -7,6 +9,7 @@ html,body,.container{
     padding: 0px;
     box-sizing: border-box;
 }
+
 /* This controls the Header Text */
 .header-text {
     font-size: small;
@@ -37,7 +40,7 @@ footer {
 
 /* This controls the buttons */
 .btn {
-    color:aliceblue;
+    color: aliceblue;
     background-color: darkgreen;
 }
 
@@ -52,7 +55,7 @@ footer {
     padding: 0px;
     font-size: medium;
     font-weight: 700;
-    color: lime;
+    color: darkgreen;
     text-align: center;
     margin: 0rem;
 }
@@ -78,7 +81,7 @@ footer {
 }
 
 /* This controls the cities searched */
-.bg-primary {
+.bg-success {
     border-radius: 10px;
 }
 
@@ -95,44 +98,8 @@ li {
     margin-right: 50%;
 }
 
-/* @media only screen and (max-width:992px) {
-    .navbar .header-text{       
-      padding-bottom: 0;
-      border-bottom: solid;   
-      width: 100%;
-      text-align: center;
-      height: 10%;
-    }
-    .footer {     
-      height: 7%;    
-      border-top: solid;      
-      border-top-width: 5px;
-      text-align: center; 
-    }
-  }
-
-  @media only screen and (max-width:320px) { 
-    .col-12 .box {
-      width: 100%;
-    }
-    .container{
-      width: 100%;
-    }
-    .navbar .footer .col-4 .row .nav{
-      width: 100%;
-      height:auto;  
-    }
-    .header-text{
-      font-size: 16px;
-    }
-    }
-    #days{
-    margin-left: -25px;
-    } */
-
-    .content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-    }
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
